DG-2008-10-21-0: Cleanup:    Old tcl code produced output error since qconf -scl is 
                             not a valid command. 
                 Review:     JG

TB-2008-10-21-1: Bugfix:     o Fixed Hedeby test basic_resource_assignment:
                               Fixed qacct related partial test
                             o Fixed Hedeby test unassign_resources
                               Fixed problem with time differences between hosts
                 Review:     AF

TB-2008-10-21-0: Bugfix:     Fixed Hedeby test for Issue 571:
                             Wrong timeout calculation for event detection
                 Review:     AF

TB-2008-10-20-0: Enhancem.:  Introduced environment variable TS_SKIP_COLLECT_LOG
                             for Hedeby testing. If set to 1, no log files are
                             collected after a failed test run.
                 Review:     CR

RH-2008-10-20-0: Bugfix:     Hedeby: test for issue 540
                 Enhancem.:  o new method wait_for_component_info_opt
                             o new method add_hedeby_ge_service
                               (is also used by hedeby_install)
                             o new method get_jvm_info
                             o new method wait_for_jvm_info
                 Review:     TB (check-in done by TB because RH on leave)

MD-2008-10-20-0: Enhancem.:  o added test for IZ 2754 
                 Review:     JG 

MG-2008-10-20-0: Enhancem.:  o Added test for hedeby issue 577:
                              checktree_hedeby/checktree/issues/issue_577/check.62.exp
MD-2008-10-17-2: Bugfix:     o removed copy paste error 
MD-2008-10-17-1: Bugfix:     o changed unclear message

MD-2008-10-17-0: Bugfix:     o change some logging messages in IZ2753
                 Enhancem.:  o IZ 77, RFE for introducing a filesystem config
                 Review:     CR

TB-2008-10-17-1: Enhancem.:  o Added test for hedeby issue 547: